feat: Introduce a dynamic, filterable, and sortable data table with virtual scrolling and comprehensive UI components.

--- a/manifest.json
+++ b/manifest.json
@@ -21,14 +21,22 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["finance", "productivity"],
+  "categories": [
+    "finance",
+    "productivity"
+  ],
   "shortcuts": [
     {
       "name": "Scan Whales",
       "short_name": "Scan",
       "description": "Start scanning whale positions",
       "url": "/",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ]
 }
